<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#E7BBA6"
    android:id="@+id/loginlayout"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="@string/sewage_gas_monitoring"
        android:layout_marginTop="15dp"
        android:textAllCaps="true"
        android:textSize="23sp"
        android:lineHeight="3dp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textColor="#603C8A"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:text="Sign In"
        android:layout_marginTop="15dp"
        android:textAllCaps="true"
        android:textSize="23sp"
        android:lineHeight="3dp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textColor="#603C8A"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/login" />
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="#534D4D"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_mail"
            android:inputType="textEmailAddress"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="#534D4D"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="143dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#CC7676"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textColor="#2C2C29"
            android:textSize="13sp" />
        <ProgressBar
            android:layout_width="30dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:id="@+id/progressbar"
            android:layout_height="30dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#CC7676"
        android:fontFamily="@font/montserrat"
        android:text="@string/forgot_password"
        android:textColor="#2C2C29"
        android:textSize="13sp" />


    <Button
        android:id="@+id/gotoreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="#d17a7a"
        android:fontFamily="@font/montserrat"
        android:text="@string/not_registered_click_to_register"
        android:textColor="#2C2C29"
        android:textSize="13sp" />


</LinearLayout>