<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bgapps"
            tools:context=".MainActivity">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginStart="250dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/sewageman" />
                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="48dp"
                        android:fontFamily="@font/montserrat"
                        android:textAllCaps="true"
                        android:text="@string/dashboard"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />
                </RelativeLayout>

                <GridLayout
                    android:columnOrderPreserved="true"
                    android:alignmentMode="alignMargins"
                    android:rowCount="2"
                    android:layout_marginTop="40dp"
                    android:columnCount="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        android:id="@+id/gas_monitoring"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <pl.droidsonroids.gif.GifImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/gaslevelicon" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/gas"
                                android:textColor="#000904" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:textSize="13sp"
                                android:text="@string/measurement"
                                android:textColor="#000904" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/concentration_variation"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardCornerRadius="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_margin="12dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/convariation"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:layout_marginTop="12dp"
                                android:text="@string/concentration"
                                android:textSize="12sp"
                                android:textColor="#000904" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/montserrat"
                                android:text="@string/variation"
                                android:textSize="12sp"
                                android:textColor="#000904" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </GridLayout>
                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="160dp"
                    android:layout_columnWeight="1"
                    android:layout_gravity="center"
                    android:id="@+id/info"
                    android:layout_rowWeight="1"
                    android:elevation="6dp"
                    app:cardCornerRadius="15dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/info" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/information"
                            android:fontFamily="@font/montserrat"
                            android:textColor="#000904"
                            android:textSize="13sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>

